--- a/dualboot/partitioning.html
+++ b/dualboot/partitioning.html
@@ -12,8 +12,8 @@
     volumes are dynamic and do not have a set size; rather they are allowed to share free space within the container itself.<p>
     <p>In this case, we are just going to add new volumes to the container, /dev/disk0s1:
     
-    <p class="cli">newfs_apfs -A -v System /dev/disk0s1</p>
-    <p class="cli">newfs_apfs -A -v Data /dev/disk0s1</p>
+    <p class="cli">newfs_apfs -A -v SystemB /dev/disk0s1</p>
+    <p class="cli">newfs_apfs -A -v DataB /dev/disk0s1</p>
     Done!</br> </br>
     Mount new system partition (/dev/disk0s1s3) to /mnt1:
     <p class="cli">mkdir /mnt1 /mnt2</p>
