--- a/dualboot/no-effaceable-storage.html
+++ b/dualboot/no-effaceable-storage.html
@@ -5,21 +5,21 @@
                 <title>Dual Booting 64 Bit devices</title>
             </head>
 <body>
-<div>
+<div class="page">
     <h2>no-effaceable-storage</h2>
     <p>Dual booted OS is almost ready to boot, we just need to generate a keybag or copy it.
     If you choose to copy it, you won’t be able to set a passcode, if you’ll do it, effaceable keys will be regenerated and first OS won’t boot anymore (so you’ll need to restore the device). </p>
     <p class="cli">cp -av /var/keybags /mnt2</p>
     <p>If you choose to generate it, continue here.<p>
     <h3>Patching devicetree</h3>
-    We need to add no-effaceable-storage property.</br>
+    We have to add no-effaceable-storage property.</br>
     <img class="align" src="images/Image7.png"></br>
         Check "use-lwvm" property and add no-effaceable-storage property above it.</br>
         <img class="align" src="images/Image8.png"></br>
             I replaced “supported-legacy-panic-flow” instead of adding it, but it’s better adding it.</p>
 <h3>Adding fixkeybag</h3>
 <p>Thanks to @nyan_satan for this technique.
-We’ll make our keybag generate when booting for first time: compile fixkeybag for arm64 and put it in / of disk0s1s3 (don’t forget to sign it using ldid for iOS 10, ldid2 for iOS 11+).
+We’ll make our keybag generate when booting for first time: compile <a href="https://github.com/NyanSatan/fixkeybag/tree/65250ad143872eab97cb4a2e034ce311903ade5a" class="link">fixkeybag</a> for arm64 and put it in / of disk0s1s3 (don’t forget to sign it using ldid for iOS 10, ldid2 for iOS 11+).
 Save original keybagd, sign fixkeybag and replace it with fixkeybag
 <p class="cli">mv /mnt1/usr/libexec/keybagd /mnt1/usr/libexec/keybagd_bak</p>
 <p class="cli">mv /mnt1/fixkeybag /mnt1/usr/libexec/com.apple.keybagd</p>
