--- a/dualboot/first-boot.html
+++ b/dualboot/first-boot.html
@@ -54,7 +54,7 @@ If you are booting the ramdisk, send it and use ramdisk command to load it:
 Load devicetree:
 
 <p class="cli">irecovery -f devicetree.img4</p>
-<p class="cli">irecovery -c devicetree.img4</p>
+<p class="cli">irecovery -c devicetree</p>
 
 <p>Send trustcache if needed:<p>
 <p class="cli">irecovery -f trustcache.img4</p>
