Added iOS 13 guide

--- a/dualboot/index.html
+++ b/dualboot/index.html
@@ -31,7 +31,8 @@
     <a href="making-ramdisk.html" class="link"></b>Making custom ramdisk</a></br>
     <a href="modifying-filesystem.html" class="link"></b>Modifying filesystem partition</a></br>
     <a href="no-effaceable-storage.html" class="link"></b>No-effaceable-storage</a></br>
-    <a href="first-boot.html" class="link"></b>First boot</a></br></h2>
+    <a href="first-boot.html" class="link"></b>First boot</a></br>
+    <a href="iOS-13.html" class="link"></b>iOS 13</a></br></h2>
 
 <h2>Brought to you by <a href="https://twitter.com/Ralph0045" class="link">@Ralph0045</a> and <a href="https://twitter.com/mcg29_" class="link">@mcg29_</a> on twitter.</h2>
 <h2>Credits/Thanks to:</h2>
