--- a/dualboot/index.html
+++ b/dualboot/index.html
@@ -1,11 +1,15 @@
 <html>
     <link rel="stylesheet" href="general.css"></br>
+    <script src="script.js"></script>
         <meta charset="Unicode">
             <head>
                 <title>Dual Booting 64 Bit devices</title>
             </head>
-<body>
+<body onload="dark_save()">
 <div class="main">
+    
+    <button id="dark_button" class="btn" onclick="dark()">🌙</button>
+    
     <center><h1>Dual Booting 64 Bit devices</h1></center>
     <h3>Introduction:</h3>
     <p>Previously, all public information regarding iOS dual booting has been for 32bit devices, e. g. iPhone 5 and older,
