--- a/dualboot/modifying-filesystem.html
+++ b/dualboot/modifying-filesystem.html
@@ -1,18 +1,22 @@
 <html>
     <link rel="stylesheet" href="general.css"></br>
+    <script src="script.js"></script>
         <meta charset="Unicode">
             <head>
                 <title>Dual Booting 64 Bit devices</title>
             </head>
-<body>
-<div class="page">
+<body onload="dark_save()">
+<div class="main">
+    
+    <button id="dark_button" class="btn" onclick="dark()">🌙</button>
+    
 <h2>Modifying filesystem</h2>
 
 Mount System partition:
 <p class="cli">mount_apfs /dev/disk0s1s3 /mnt1</p>
 
 And modify fstab using nano:
-<p class="cli">cp -av /etc/fstab /mnt1/etc/fstab</p>
+<p class="cli">cp -a /etc/fstab /mnt1/etc/fstab</p>
 <p class="cli">nano /mnt1/etc/fstab</p>
 <img class="align" src="images/Image7.png"></br>
     Change disk0s1s1 to disk0s1s3 and disk0s1s2 to disk0s1s4. (or the new system and data partitions disks based on the device.)</br>
