--- a/dualboot/index.html
+++ b/dualboot/index.html
@@ -27,7 +27,7 @@
 	
         <li><b>MacOS</b> </li>
 		<li><b>A 64bit jailbroken iPhone</b> </li>
-        <li><b>ipwndfu</b> fork of @LinusHenze (or any utility to place device in pwned DFU mode)</li>
+        <li><b>ipwndfu</b> fork (or any utility to place device in pwned DFU mode)</li>
         <li><b>A disassembler</b> (I will use IDA) </lI>
     </ol>
     <h2>Contents:</h2>
@@ -42,7 +42,8 @@
 <h2>Credits/Thanks to:</h2>
 <b>@axi0mx</b> for checkm8 exploit </br>
 <b>@b1n4r1b01</b> for restored_external tricks</br>
-<b>@LinusHenze</b> for ipwndfu fork </br>
+<b>@b1n4r1b01</b> for restored_external tricks</br>
+<b>@LinusHenze</b> for ipwndfu fork</br>
 <b>@nyan_satan</b> for original 32 bit guide and fixkeybag </br>
 <b>@tihmstar</b> for iBoot64Patcher and liboffsetfinder64 </br>
 <b>@xerub</b> for img4lib </br>
