--- a/dualboot/index.html
+++ b/dualboot/index.html
@@ -22,17 +22,13 @@
     <h3>Disclaimer:</h3>
     <p>There's no warranty given. Follow this guide on your own risk. If something goes wrong, a restore should fix everything.</p>
     
-    <h3>Requirements:</h3>
-    <ol>
-	
-        <li><b>MacOS</b> </li>
-		<li><b>A 64bit jailbroken iPhone</b> </li>
-        <li><b>ipwndfu</b> fork (or any utility to place device in pwned DFU mode)</li>
-        <li><b>A disassembler</b> (I will use IDA) </lI>
-    </ol>
+
     <h2>Contents:</h2>
-    <h2><a href="partitioning.html" class="link"></b> Partitioning and Restoring RootFS</a></br>
+	<h2><a href="requirements.html" class="link"></b>Requirements</a></br>
+    <a href="partitioning.html" class="link"></b> Partitioning and Restoring RootFS</a></br>
+    <a href="patching_bootchain.html" class="link"></b>Patching Bootchain</a></br>	
     <a href="making-ramdisk.html" class="link"></b>Making custom ramdisk</a></br>
+	<a href="ramdisk-boot.html" class="link"></b>Ramdisk Boot</a></br>
     <a href="modifying-filesystem.html" class="link"></b>Modifying filesystem partition</a></br>
     <a href="no-effaceable-storage.html" class="link"></b>No-effaceable-storage</a></br>
     <a href="first-boot.html" class="link"></b>First boot</a></br>
