--- a/dualboot/requirements.html
+++ b/dualboot/requirements.html
@@ -32,7 +32,7 @@
 	<p>For example:</p>
 	<li><b>ipwndfu fork for your device that supports removing BootROM signature checks</b></li>
 	
-	<li><b><a href="https://github.com/libimobiledevice/libirecovery" class="link">eclipsa</a> for A8(x)/A9 devices</b></lI>		
+	<li><b><a href="https://github.com/0x7ff/eclipsa" class="link">eclipsa</a> for A8(x)/A9 devices</b></lI>		
 	
 	<h4>The target firmware (iOS version) which can be found <a href="https://ipsw.me/" class="link">here</a></h4>
 	
