--- a/dualboot/first-boot.html
+++ b/dualboot/first-boot.html
@@ -14,14 +14,12 @@
 
 
 </br>It's finally time to put the iPhone into pwned dfu and boot using irecovery:</br>
-
+	<p><b>Put in pwned DFU mode and ensure BootROM signature checks have been disabled.</b></p>
 	<p>Send iBSS, along with iBEC: (make sure to send regular iBEC this time!)<p>
 	<p class="cli">irecovery -f iBSS.img4</p>
 	<p class="cli">irecovery -f iBEC.img4</p>
 	
 	<p><b>Once again for A10 and newer devices ONLY:</b><p>
-	<p class="cli">irecovery -f iBSS.img4</p>
-	<p class="cli">irecovery -f iBEC.img4</p>
 	<p class="cli">irecovery -c go</p>
 
 
