--- a/dualboot/ramdisk-boot.html
+++ b/dualboot/ramdisk-boot.html
@@ -14,15 +14,13 @@
 
 
 	</br>It's time to boot the ramdisk and flash the new filesystem:</br>
-
+	<p><b>Put in pwned DFU mode and ensure BootROM signature checks have been disabled.</b></p>
 	<p>Send iBSS, along with iBEC:<p>
 	<p class="cli">irecovery -f iBSS.img4</p>
 	<p class="cli">irecovery -f iBECRamdisk.img4</p>
 
 	<p><b>Note for A10 and newer devices ONLY: Apple unified all iBoot images and as a result booting iBEC is slightly different.</b><p>
-	<p>After sending iBSS, the device will already be in recovery. in order to boot iBEC from iBSS, we must send the go command from iBSS recovery.
-	<p class="cli">irecovery -f iBSS.img4</p>
-	<p class="cli">irecovery -f iBECRamdisk.img4</p>
+	<p>After sending iBSS, the device will already be in recovery. in order to boot iBEC from iBSS, we must send the go command from iBSS recovery mode.
 	<p class="cli">irecovery -c go</p>
 	<p>Device screen should go blank and light up again once iBEC boots.</p>
 	
