--- a/dualboot/patching_bootchain.html
+++ b/dualboot/patching_bootchain.html
@@ -16,8 +16,8 @@
 
 <p>Firmware keys and proper component names can be found <a href="https://www.theiphonewiki.com/wiki/firmware" class="link">here</a>.</p> 
 
-<p class="cli">img4 -i iBSS.* -o iBSS.dec iv_key</p>
-<p class="cli">img4 -i iBEC.* -o iBEC.dec iv_key</p>
+<p class="cli">img4 -i iBSS.* -o iBSS.dec -k iv_key</p>
+<p class="cli">img4 -i iBEC.* -o iBEC.dec -k iv_key</p>
 
 And patch signature checks using iBoot64Patcher:
 
