Add ldid requirement

--- a/dualboot/requirements.html
+++ b/dualboot/requirements.html
@@ -26,6 +26,8 @@
 
 	<p><a href="https://github.com/libimobiledevice/libirecovery" class="link">irecovery</a> by the <a href="https://github.com/libimobiledevice" class="link">libimobiledevice team</a></p>
 
+	<p><a href="https://github.com/ProcursusTeam/ldid" class="link">ldid</a> by <a href="https://twitter.com/saurik" class="link">saurik</a> (modified fork by the <a href="https://twitter.com/ProcursusTeam" class="link">Procursus team</a></p>
+
 	<h4>A tool to place your device into pwned DFU mode.</h4>
 	<p>For macOS:</p>
 	<li><b><a href="https://github.com/0x7ff/gaster" class="link">gaster</a> for A7-A11 devices</b></lI>
