--- a/dualboot/ramdisk-boot.html
+++ b/dualboot/ramdisk-boot.html
@@ -17,31 +17,32 @@
 	<p><b>Put in pwned DFU mode and ensure BootROM signature checks have been disabled.</b></p>
 	<p>Send iBSS, along with iBEC:<p>
 	<p class="cli">irecovery -f iBSS.img4</p>
+	<p><b>Note: If no output is given after running this command, run the command again one more time.</b><p></p>
 	<p class="cli">irecovery -f iBECRamdisk.img4</p>
 
 	<p><b>Note for A10 and newer devices ONLY: Apple unified all iBoot images and as a result booting iBEC is slightly different.</b><p>
 	<p>After sending iBSS, the device will already be in recovery. in order to boot iBEC from iBSS, we must send the go command from iBSS recovery mode.
 	<p class="cli">irecovery -c go</p>
 	<p>Device screen should go blank and light up again once iBEC boots.</p>
-	
-	send and load ramdisk:
-	<p class="cli">irecovery -f ramdisk</p>
-	<p class="cli">irecovery -c ramdisk</p>
 
-	send and load devicetree:
+	Send and load the devicetree:
 	<p class="cli">irecovery -f devicetree.img4</p>
 	<p class="cli">irecovery -c devicetree</p>
 
-	<p>If your target system is iOS 12.x or newer, send signed trustcache: (otherwise this can be skipped)<p>
+	Send and load the custom ramdisk:
+	<p class="cli">irecovery -f ramdisk.img4</p>
+	<p class="cli">irecovery -c ramdisk</p>
+
+	<p>If your target system is iOS 12.x or newer, send the signed trustcache: (otherwise this can be skipped)<p>
 	<p class="cli">irecovery -f trustcache.img4</p>
 	<p class="cli">irecovery -c firmware</p>
 
-	Send kernelcache and bootx:
-	<p class="cli">irecovery -f kernelcache.img4</p>
+	Send the booted kernelcache and boot into the ramdisk:
+	<p class="cli">irecovery -f kernelcacheramdisk.img4</p>
 	<p class="cli">irecovery -c bootx</p>
 
 
-	<p>If you did everything correctly ramdisk should boot and run apfs_invert.</br>
+	<p>If you did everything correctly, the ramdisk should boot and run apfs_invert.</br>
 	
     </br><img class="limit" src="images/Image6.jpeg"></br></br>
 	<center>Next part → <a href="modifying-filesystem.html" class="link"></b>Modifying filesystem</a></center></br>
