--- a/dualboot/partitioning.html
+++ b/dualboot/partitioning.html
@@ -39,7 +39,7 @@
     <p class="cli">iproxy 2222 22</p>
     <p>Then copy the out file to / of new system partition using scp:</p>
     <p class="cli">scp -P 2222 out.dmg root@localhost:/mnt1</p>
-	<center>Next part → <a href="patching_bootchain.html" class="link"></b>Patching Bootchain</a></center></br>
+	<center>Next part → <a href="patching-bootchain.html" class="link"></b>Patching Bootchain</a></center></br>
 	<center><a href="index.html" class="link"></b>Dual Booting 64 Bit</a></center></br>
 </div>
 </body>
